fixing layout bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,10 @@
-
-.white-gradient{
-  position: absolute;
-  width: 20rem;
-  height: 20rem;
-  background: rgba(255, 255, 255, 0.522);
-  filter: blur(70px);
-  border-radius: 100px;
+.App{
+  position: relative;
+  overflow-x: clip;
+  background-color: white;
+}
+.App>:nth-child(1)
+{
+  background: var(--black);
+  position: relative;
 }
