--- a/client/src/components/1-Header/Header.css
+++ b/client/src/components/1-Header/Header.css
@@ -10,6 +10,7 @@
 .h-wrapper{
   background-color: var(--black);
   color: white;
+  padding: 0 10px;
 }
 /* ------- h-wrapper ------------*/
 
